--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,6 @@ body {
 }
 
 .logo-container {
-    display: flex;
-    align-items: center;
     margin-bottom: 5vh;
     transition: transform 0.3s ease;
 }
@@ -38,13 +36,13 @@ h1 {
     color: white;
     margin: 0;
     transition: transform 0.3s ease;
-    font-size: 6.5vw;
+    font-size: 8vw;
 }
 
 img {
     width: 20vw;
     height: auto;
-    margin-right: 2vw;
+    margin-bottom: 2vh;
 }
 
 img:hover,
@@ -79,17 +77,10 @@ h1:hover {
     }
 }
 
-/* Default styles for the button and font size */
-.download-button {
-    font-size: 150px;
-    padding: 10px 20px;
-}
-
 /* Media query for mobile devices */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1000px) {
     .download-button {
-        font-size: 150px; /* Increase font size for mobile devices */
+        font-size: 100px; /* Increase font size for mobile devices */
         padding: 15px 25px; /* Increase button padding for mobile devices */
     }
 }
-
