--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,9 @@ body {
     }
 }
 
-.logo-container {
+.logo-container img {
+    width: 30vw;
+    height: auto;
     margin-bottom: 5vh;
     transition: transform 0.3s ease;
 }
@@ -53,39 +55,34 @@ h1:hover {
 .download-button {
     display: inline-block;
     margin-top: 5vh;
-    padding: 3vh 6vw;
+    padding: 1rem;
+    font-size: 40px; 
     background-color: #003459;
     color: white;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    font-size: 2vw;
 }
 
 .download-button:hover {
     background-color: #db3a34;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (min-width: 360px) and (max-width: 768px){
+    .download-button {
+        font-size: 60px; 
+        background-color: green;
+    }
     h1 {
-        font-size: 10vw;
-    }
-
-    .download-button {
-        font-size: 10vw;
-        padding: 3vh 8vw;
-    }
+        color: green;
+        margin: 0;
+        transition: transform 0.3s ease;
+        font-size: 8vw;
 }
-
-
-@media only screen and (max-width: 1000px) {
-    .download-button {
-        font-size: 80px; 
-        padding: 15px 25px; 
-    }
     .logo-container img {
         width: 30vw;
         height: auto;
-        margin-bottom: 2vh;
+        margin-bottom: 1rem;
+
     }
 }
